--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": "0.10.x",
     "npm": "1.4.x"
   },
-  "devDependencies":{
+  "devDependencies": {
     "sqlite3": "^3.0.8"
   },
   "dependencies": {
@@ -18,10 +18,11 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express": "~4.9.0",
-    "express-partials": "^0.3.0",
-    "morgan": "~1.3.0",
-    "sequelize": "^3.0.0",
-    "serve-favicon": "~2.1.3",
-    "pg":"^4.1.1"
+    "express-partials": "~0.3.0",
+    "pg": "^4.3.0",
+    "pg-hstore": "^2.3.2",
+     "morgan": "~1.3.0",
+    "sequelize": "^2.1.3",
+    "serve-favicon": "~2.1.3"
   }
 }
